
[TestDelete_ContextBasedDetection_ClusterNotFound - 1]
🗑️ Delete cluster...
► deleting Vanilla cluster 'nonexistent'
---

[TestDelete_ContextBasedDetection_DeletesCluster/K3d_context_pattern - 1]
🗑️ Delete cluster...
► deleting K3s cluster 'dev-cluster'
✔ cluster deleted
---

[TestDelete_ContextBasedDetection_DeletesCluster/Kind_context_pattern - 1]
🗑️ Delete cluster...
► deleting Vanilla cluster 'my-cluster'
✔ cluster deleted
---

[TestDelete_ContextBasedDetection_DeletesCluster/Talos_context_pattern - 1]
🗑️ Delete cluster...
► deleting Talos cluster 'talos-homelab'
✔ cluster deleted
---
